<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.activities.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_ultra"
            android:background="#595959">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_ultra"
                android:layout_weight="0.25"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/Profile.Metrics.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5">

                </TextView>

                <TextView
                    style="@style/Profile.Metrics.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_label_rating" />

            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/font_larger_22"
                android:layout_marginBottom="@dimen/font_larger_22"
                android:background="@color/divider_grey_light" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_ultra"
                android:layout_weight="0.5"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/Profile.Metrics.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5">

                </TextView>

                <TextView
                    style="@style/Profile.Metrics.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wrote_lines_of_code" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/font_larger_22"
                android:layout_marginBottom="@dimen/font_larger_22"
                android:background="@color/divider_grey_light" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_ultra"
                android:layout_weight="0.25"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    style="@style/Profile.Metrics.Value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5">

                </TextView>

                <TextView
                    style="@style/Profile.Metrics.Label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/projects" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_phone_black_24dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_big_72"
                android:layout_marginStart="@dimen/spacing_larger_32"
                android:layout_marginLeft="@dimen/spacing_larger_32"
                android:layout_marginEnd="@dimen/spacing_normal_16"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/phone_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="true"
                        android:focusable="true"
                        android:hint="@string/mobile_phone"
                        android:inputType="phone"
                        android:text="89688416168"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_phone_in_talk_black_24dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_marginStart="@dimen/spacing_huge_72"
            android:layout_marginLeft="@dimen/spacing_huge_72"
            android:background="@color/grey_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_email_black_24dp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/size_big_72"
                android:layout_marginStart="@dimen/spacing_larger_32"
                android:layout_marginLeft="@dimen/spacing_larger_32"
                android:layout_marginEnd="@dimen/spacing_normal_16"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/email_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="true"
                        android:focusable="true"
                        android:hint="@string/e_mail"
                        android:inputType="textEmailAddress"
                        android:text="My mail"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey"
                        />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_send_black_24dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_marginStart="@dimen/spacing_huge_72"
            android:layout_marginLeft="@dimen/spacing_huge_72"
            android:background="@color/grey_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_vk_circle" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="@dimen/spacing_huge_72"
                android:layout_marginStart="@dimen/spacing_larger_32"
                android:layout_marginLeft="@dimen/spacing_larger_32"
                android:layout_marginEnd="@dimen/spacing_normal_16"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/vk_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:focusable="false"
                        android:hint="@string/vk_profile"
                        android:inputType="textUri"
                        android:text="My VK profile"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_marginStart="@dimen/spacing_huge_72"
            android:layout_marginLeft="@dimen/spacing_huge_72"
            android:background="@color/grey_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_github_circle" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginStart="@dimen/spacing_larger_32"
                android:layout_marginLeft="@dimen/spacing_larger_32"
                android:layout_marginEnd="@dimen/spacing_normal_16"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/github_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="true"
                        android:focusable="true"
                        android:hint="@string/github_profile"
                        android:inputType="textUri"
                        android:text="My github profile"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <ImageView
                style="@style/icon.right"
                android:src="@drawable/ic_visibility_black_24dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_marginStart="@dimen/spacing_huge_72"
            android:layout_marginLeft="@dimen/spacing_huge_72"
            android:background="@color/grey_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small_8"
            android:layout_marginBottom="@dimen/spacing_small_8"
            android:orientation="horizontal">

            <ImageView
                style="@style/icon.left"
                android:src="@drawable/ic_account_circle" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_larger_32"
                android:layout_marginLeft="@dimen/spacing_larger_32"
                android:layout_marginEnd="@dimen/spacing_normal_16"
                android:layout_marginRight="@dimen/spacing_normal_16"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/about_et"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="true"
                        android:focusable="true"
                        android:hint="@string/about"
                        android:inputType="textMultiLine"
                        android:text="ya top proger"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_size"
            android:layout_marginStart="@dimen/spacing_huge_72"
            android:layout_marginLeft="@dimen/spacing_huge_72"
            android:background="@color/grey_light" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>